IF(BUILD_LANGUAGE_BINDINGS)
  
SET(OPENMA_BINDINGS_SRCS
  src/referencecounting.cpp
  src/utils.cpp
)

ADD_LIBRARY(bindings ${OPENMA_LIBS_BUILD_TYPE} ${OPENMA_BINDINGS_SRCS})
TARGET_LINK_LIBRARIES(bindings base)
TARGET_INCLUDE_DIRECTORIES(bindings PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>
  $<INSTALL_INTERFACE:include>
)
GENERATE_EXPORT_HEADER(bindings
                       BASE_NAME OPENMA_BINDINGS
                       EXPORT_FILE_NAME include/openma/bindings_export.h)

SET_TARGET_PROPERTIES(bindings PROPERTIES ${OPENMA_LIBRARY_PROPERTIES})
IF (NOT ${OPENMA_BUILD_SHARED_LIBS})
  SET_TARGET_PROPERTIES(bindings PROPERTIES COMPILE_FLAGS -DOPENMA_BINDINGS_STATIC_DEFINE)
ENDIF()

INSTALL(TARGETS bindings EXPORT OpenMATargets
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  RUNTIME DESTINATION lib  
  INCLUDES DESTINATION lib
)

ENDIF()