SET(OPENMA_INSTRUMENT_SRCS
  src/forceplate.cpp
  src/forceplatetype2.cpp
  src/forceplatetype4.cpp
  src/forceplatetype5.cpp
)

ADD_LIBRARY(instrument ${OPENMA_LIBS_BUILD_TYPE} ${OPENMA_INSTRUMENT_SRCS})
TARGET_LINK_LIBRARIES(instrument base math)
TARGET_INCLUDE_DIRECTORIES(instrument PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>
  $<INSTALL_INTERFACE:include>
)
GENERATE_EXPORT_HEADER(instrument
                       BASE_NAME OPENMA_INSTRUMENT
                       EXPORT_FILE_NAME include/openma/instrument_export.h)

SET_TARGET_PROPERTIES(instrument PROPERTIES ${OPENMA_LIBRARY_PROPERTIES})
IF (NOT ${OPENMA_BUILD_SHARED_LIBS})
  SET_TARGET_PROPERTIES(instrument PROPERTIES COMPILE_FLAGS -DOPENMA_INSTRUMENT_STATIC_DEFINE)
ENDIF()

IF(BUILD_LANGUAGE_BINDINGS)
  ADD_SUBDIRECTORY(swig)
ENDIF()

IF(BUILD_UNIT_TESTS)
  ADD_SUBDIRECTORY(test)
ENDIF()

INSTALL(TARGETS instrument EXPORT OpenMATargets
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  RUNTIME DESTINATION lib  
  INCLUDES DESTINATION lib
)