SET(OPENMA_IO_SRCS
  src/binarystream.cpp
  src/buffer.cpp
  src/device.cpp
  src/file.cpp
  src/handler.cpp
  src/handlerplugin.cpp
  src/handlerreader.cpp
)

# ADD_OPENMA_MODULE(io)

# Variable OPENMA_STATIC_IO_PLUGINS_SRCS is used for static build
SET(OPENMA_STATIC_IO_PLUGINS_SRCS "" CACHE INTERNAL "")
ADD_SUBDIRECTORY("plugins")

ADD_LIBRARY(io ${OPENMA_LIBS_BUILD_TYPE} ${OPENMA_IO_SRCS} ${OPENMA_STATIC_IO_PLUGINS_SRCS})
TARGET_LINK_LIBRARIES(io base)
TARGET_INCLUDE_DIRECTORIES(io PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/plugins>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>
  $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>
  $<INSTALL_INTERFACE:include>
)
GENERATE_EXPORT_HEADER(io
                       BASE_NAME OPENMA_IO
                       EXPORT_FILE_NAME include/openma/io_export.h)

SET_TARGET_PROPERTIES(io PROPERTIES ${OPENMA_LIBRARY_PROPERTIES})
IF (NOT ${OPENMA_BUILD_SHARED_LIBS})
  SET_TARGET_PROPERTIES(io PROPERTIES COMPILE_FLAGS -DOPENMA_IO_STATIC_DEFINE)
ENDIF()

IF(BUILD_LANGUAGE_BINDINGS)
  ADD_SUBDIRECTORY(swig)
ENDIF()

IF(BUILD_UNIT_TESTS)
  ADD_SUBDIRECTORY(test)
ENDIF()