# IF(OPENMA_BUILD_SHARED_LIBS)
#   MESSAGE(FATAL_ERROR "The analysis algorithm dynamic loading mechanism is not yet implemented. You cannot build this module as a shared library.")
# ENDIF()

SET(OPENMA_STATIC_ANALYSIS_PLUGINS_SRCS "")
SET(OPENMA_STATIC_ANALYSIS_PLUGIN_LOADER_INCLUDES "")

FILE(GLOB ALGORITHM_CATEGORY_PATHS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "${CMAKE_CURRENT_SOURCE_DIR}/*")
FOREACH(_category_path ${ALGORITHM_CATEGORY_PATHS})
  SET(OPENMA_CURRENT_CATEGORY_PATH "${CMAKE_CURRENT_SOURCE_DIR}/${_category_path}")
  IF(IS_DIRECTORY ${OPENMA_CURRENT_CATEGORY_PATH})
    FILE(GLOB ALGOS_PATHS RELATIVE ${OPENMA_CURRENT_CATEGORY_PATH} "${OPENMA_CURRENT_CATEGORY_PATH}/*")
    STRING(TOUPPER ${_category_path} OPENMA_ANALYSIS_PLUGIN_CATEGORY_NAME)
    SET(OPENMA_STATIC_ANALYSIS_${OPENMA_ANALYSIS_PLUGIN_CATEGORY_NAME}_PLUGIN_LOADER_COMMANDS "")
    FOREACH(_algo_path ${ALGOS_PATHS})
      IF(IS_DIRECTORY ${OPENMA_CURRENT_CATEGORY_PATH}/${_algo_path})
        SET(OPENMA_ANALYSIS_PLUGIN_NAME "" CACHE INTERNAL "")
        SET(OPENMA_ANALYSIS_PLUGIN_SRCS "" CACHE INTERNAL "")
        ADD_SUBDIRECTORY(${_category_path}/${_algo_path})
        IF (NOT OPENMA_ANALYSIS_PLUGIN_NAME OR NOT OPENMA_ANALYSIS_PLUGIN_SRCS)
          MESSAGE(FATAL_ERROR "Missing plugin name or plugin sources. Please, verify the CMake configuration script")
        ENDIF()
        SET(OPENMA_STATIC_ANALYSIS_PLUGINS_SRCS ${OPENMA_STATIC_ANALYSIS_PLUGINS_SRCS} ${OPENMA_ANALYSIS_PLUGIN_SRCS} CACHE INTERNAL "")
        STRING(TOLOWER ${OPENMA_ANALYSIS_PLUGIN_NAME} OPENMA_ANALYSIS_PLUGIN_HEADER)
        SET(OPENMA_STATIC_ANALYSIS_PLUGIN_LOADER_INCLUDES
          "${OPENMA_STATIC_ANALYSIS_PLUGIN_LOADER_INCLUDES}#include \"${_category_path}/${_algo_path}/${OPENMA_ANALYSIS_PLUGIN_HEADER}.h\"\n")
        SET(OPENMA_STATIC_ANALYSIS_${OPENMA_ANALYSIS_PLUGIN_CATEGORY_NAME}_PLUGIN_LOADER_COMMANDS
          "${OPENMA_STATIC_ANALYSIS_${OPENMA_ANALYSIS_PLUGIN_CATEGORY_NAME}_PLUGIN_LOADER_COMMANDS}  plugin = new ${OPENMA_ANALYSIS_PLUGIN_NAME}; manager->add(plugin);\n")
        # IF(OPENMA_BUILD_SHARED_LIBS)
        #   SET(OPENMA_STATIC_ANALYSIS_${}_PLUGIN_LOADER_COMMANDS "")
        # ENDIF()
      ENDIF()
    ENDFOREACH()
  ENDIF()
ENDFOREACH()

CONFIGURE_FILE(${OPENMA_CMAKE_MODULE_PATH}/templates/staticanalysispluginloader.h.in
               ${CMAKE_CURRENT_BINARY_DIR}/staticanalysispluginloader.h @ONLY IMMEDIATE)